added restart to stream service

--- a/ansible/roles/harvester/templates/twitter_stream.j2
+++ b/ansible/roles/harvester/templates/twitter_stream.j2
@@ -9,6 +9,7 @@ Environment="ftp_proxy=http://wwwproxy.unimelb.edu.au:8000"
 Type=idle
 User=ubuntu
 ExecStart=/usr/bin/python3 {{ install_location }}/twitter_crawler/twitter_stream.py
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
