--- a/ansible/roles/couch/templates/local.j2
+++ b/ansible/roles/couch/templates/local.j2
@@ -7,7 +7,7 @@
 [couchdb]
 ;max_document_size = 4294967296 ; bytes
 ;os_process_timeout = 5000
-database_dir = /mnt/data
+;database_dir = /mnt/data
 
 [couch_peruser]
 ; If enabled, couch_peruser ensures that a private per-user database
