--- a/web_app/team77app/templates/map.html
+++ b/web_app/team77app/templates/map.html
@@ -1,50 +1,109 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <meta charset="utf-8" />
     <title>Map</title>
 
-
+    <style type="text/css">
+      html { height: 100%; }
+      body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+      }
+      div#container {
+        width: 100%;
+        height: 100%;
+      }
+      #links-box {
+        position : fixed;
+        float: none;
+        top: 80px;
+        left: 20px;
+      }
+      .map-legend {
+        position : fixed;
+        float: none;
+        top: 290px;
+        left: 26px;
+      }
+      .label-yellow {
+			background: yellow;
+		  }
+      #map {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
 </head>
 <body>
-  <div id="map" style="width: 1270px; height: 670px;"></div>
-  <script>
-    // Initialize and add the map
-    function initMap() {
-      var point_1 = {lat: {{ latitude }}, lng: {{ longitude }}};
-      var map = new google.maps.Map(document.getElementById('map'), {zoom: 12, center: point_1});
+  <div id="container">
+    <div id="map"></div>
+    <script>
+      // Initialize and add the map
+      function initMap() {
+        var point_1 = {lat: {{ latitude }}, lng: {{ longitude }}};
+        var map = new google.maps.Map(document.getElementById('map'), {zoom: 11, center: point_1});
 
-      var marker = new google.maps.Marker({position: point_1, map: map});
+        var marker = new google.maps.Marker({position: point_1, map: map});
 
-      map.data.loadGeoJson('http://45.113.233.231:8000/geojson');
 
-      map.data.setStyle(function(feature) {
-        color = feature.getProperty('color');
-        return ({
-          fillColor: color,
-          strokeColor: color,
-          strokeWeight: 1
+        map.data.loadGeoJson('http://45.113.233.231:8000/geojson/?p={{parameter}}');
+
+
+        map.data.setStyle(function(feature) {
+          color = feature.getProperty('color');
+          return ({
+            fillColor: color,
+            strokeColor: color,
+            strokeWeight: 1
+          });
         });
-      });
 
-      map.data.addListener('mouseover', function(event) {
-        document.getElementById('info-box').textContent = event.feature.getProperty('id');
-      });
+        // map.data.addListener('mouseover', function(event) {
+        //   document.getElementById('info-box').textContent = event.feature.getProperty('id');
+        // });
 
-      infoWindow = new google.maps.InfoWindow;
+        infoWindow = new google.maps.InfoWindow;
 
-      map.data.addListener('click', function(event) {
-        var contentString = event.feature.getProperty('id');
-        contentString += "\n Number of health records = " + event.feature.getProperty('health_records');
-        infoWindow.setContent(contentString);
-        infoWindow.setPosition(event.latLng);
-        infoWindow.open(map);
-      })
-    }
-  </script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxy6il3MhjKj9VbyNN4YcFdWDx_yRy6HU&callback=initMap"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+        map.data.addListener('click', function(event) {
+          var contentString = "<p>" + event.feature.getProperty('id') +"</p>";
+          contentString += "<p>Number of health records = " + event.feature.getProperty('psych')+"</p>";
+          contentString += "<p>Exercise level = " + event.feature.getProperty('exercise')+"</p>";
+          contentString += "<p>Obesity level = " + event.feature.getProperty('obesity')+"</p>";
+          contentString += "<p>Alchogol consumption = " + event.feature.getProperty('alcohol')+"</p>";
+          contentString += "<p>Exercise tweets = " + Math.round(event.feature.getProperty('sloth')*100)/100+"</p>";
+          contentString += "<p>Gluttony tweets = " + Math.round(event.feature.getProperty('gluttony')*100)/100+"</p>";
+          infoWindow.setContent(contentString);
+          infoWindow.setPosition(event.latLng);
+          infoWindow.open(map);
+        })
+      };
+    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxy6il3MhjKj9VbyNN4YcFdWDx_yRy6HU&callback=initMap"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
-  <div id='info-box' style="position : fixed; bottom: 50px; left: 0; width: 100px; height: 50px; border: 1px solid #73AD21; background-color: white"></div>
+    <div id='links-box'class="btn-group-vertical" role="group" aria-label="...">
+      <a href='http://45.113.233.231:8000/map/?p=exercise'  class="btn btn-default">Exercise level</a>
+      <a href='http://45.113.233.231:8000/map/?p=obesity' class="btn btn-default">Obesity level</a>
+      <a href='http://45.113.233.231:8000/map/?p=alcohol' class="btn btn-default">Alcohol consumption</a>
+      <a href='http://45.113.233.231:8000/map/?p=psych' class="btn btn-default">Psych score</a>
+      <a href='http://45.113.233.231:8000/map/?p=sloth' class="btn btn-default">Exercise tweets</a>
+      <a href='http://45.113.233.231:8000/map/?p=gluttony' class="btn btn-default">Gluttony tweets</a>
+    </div>
+
+    <div class="map-legend">
+      <span class="label label-primary">Better</span>
+      <span class="label label-success">.</span>
+      <span class="label label-success label-yellow">.</span>
+      <span class="label label-warning">.</span>
+      <span class="label label-danger">Worse</span>
+    </div>
+  </div>
+
+  <!-- <div id='info-box' style="position : fixed; bottom: 50px; left: 0; width: 100px; height: 50px; border: 1px solid #73AD21; background-color: white">
+    <p>{{parameter}}
+  </div> -->
 </body>
 </html>
